# ccwm.cpp

./: .gitignore  CMakeLists.txt  setup.py
ccwm_cpp/: __init__.py  ccwm.py
ggml/: CMakeLists.txt
gguf_tests/: convert.py
json/: pybind11_json.hpp
json/nlohmann/: json.hpp
src/: ccwm.cpp  ccwm.h  ggmlwrapper.cpp  ggmlwrapper.h  pybind.cpp  test.cpp  test.h  utils.h
tests/: convert.py  mat_test.py  test.pt
